--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- navbar start -->
 
 
-        <nav class="navbar  navbar-expand-lg ">
+        <nav class="navbar  navbar-expand-lg">
             <div class="container mx-auto">
                 <!-- <a class="navbar-brand" href="#">Navbar</a> -->
                 <button class="navbar-toggler bg-secondary  border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -388,26 +388,51 @@
 
         <section class="container my-5">
             <div class="text-center">
-                <h2 class="h1 fw-bold text-dark">Frequently Asked <span style="color:#E76F51">Questions</span> </h2>
+                <h2 class="h1 fw-bold text-dark">Contact <span style="color:#E76F51">US</span> </h2>
 
             </div>
 
             <div class="row my-5 g-5 align-items-center">
-                <!--FAQ box -->
+                <!--Contact us form box -->
                 <div class="col-lg-6 col-md-12 col-sm-12 mb-sm-5 border-0 mb-md-4 mx-auto ">
-                    <div class="mx-auto" style="height: 430px; max-width: 430px;"> <img src="assets/images/faq.png" class="img-fluid" alt=""></div>
+                    <div class="row mb-3">
+                        <p class="h4 fw-bold">Address:</p>
+                        <p>Dhaka, Bangladesh</p>
+                    </div>
+                    <form class="row g-3">
+                        <h4 class="h4 fw-bold h4">Send Your Words:</h4>
+                        <div class="col-md-6">
+                            <label for="inputfname" class="form-label">Fast Name</label>
+                            <input type="text" class="form-control" id="inputfname" placeholder="Hasanul">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="lastname" class="form-label">Last Name</label>
+                            <input type="text" class="form-control" id="lastname" placeholder="Sakir">
+                        </div>
+                        <div class="col-12">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="yourmail@mail.com">
+                        </div>
+                        <div class="col-12">
+                            <label for="textare" class="form-label">Your Message</label>
+                            <!-- <textarea class="form-control" id="email" placeholder="yourmail@mail.com"> -->
+                            <textarea name="" id="textare" class="form-control"></textarea>
+                        </div>
+
+                        <div class="col-12">
+                            <button type="submit" class="btn text-light" style="background-color: #E76F51;"><i
+                                    class="far fa-paper-plane"></i> Send
+                                Message</button>
+                        </div>
+                    </form>
                 </div>
-                <!--FAQ box -->
+                <!--contact us map box -->
+
                 <div class="col-lg-6 col-md-12 col-sm-12 mb-sm-5 border-0 mb-md-4 mx-auto ">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233667.822391377!2d90.27923731743147!3d23.7808874568017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e0!3m2!1sen!2sbd!4v1627557314057!5m2!1sen!2sbd"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
                 </div>
-            </div>
-
-
-
-
-
-            </div>
         </section>
 
 
