--- a/index.html
+++ b/index.html
@@ -436,8 +436,92 @@
         </section>
 
 
+        <!-- Choose Bikes By Brands  -->
 
+        <section class="container my-5">
+
+
+            <div class="row my-5 align-items-center">
+                <!--Choose Bikes By Brands box -->
+                <div class="col-lg-6 col-md-12 col-sm-12 mb-sm-5 border-0 mb-md-4 ">
+                    <div class="text-center">
+                        <h2 class="h1 fw-bold text-dark">Choose Bikes By <span style="color:#E76F51">Brands</span> </h2>
+
+                    </div>
+                    <div class="row mt-5 g-5">
+                        <div class=" col-lg-4 col-md-3  col-sm-4">
+
+                            <img src="assets/images/brand/walton-logo.png" class="mx-auto  d-block px-2 py-3 img-fluid" style="max-width:150px" alt="">
+
+                        </div>
+                        <div class=" col-lg-4 col-md-3  col-sm-4">
+
+                            <img src="assets/images/brand/tvs-logo.png" class="mx-auto  d-block px-2 py-3 img-fluid" style="max-width:150px" alt="">
+
+                        </div>
+                        <div class=" col-lg-4 col-md-3  col-sm-4">
+
+                            <img src="assets/images/brand/suzuki_logo.png" class="mx-auto  d-block px-2 py-3 img-fluid" style="max-width:150px" alt="">
+
+                        </div>
+                        <div class=" col-lg-4 col-md-3  col-sm-4">
+
+                            <img src="assets/images/brand/runner-logo.png" class="mx-auto  d-block px-2 py-3 img-fluid" style="max-width:150px" alt="">
+
+                        </div>
+                        <div class=" col-lg-4 col-md-3  col-sm-4">
+
+                            <img src="assets/images/brand/mahindra-logo.png" class="mx-auto  d-block px-2 py-3 img-fluid" style="max-width:150px" alt="">
+
+                        </div>
+                        <div class=" col-lg-4 col-md-3  col-sm-4">
+
+                            <img src="assets/images/brand/ktm-logo.png" class="mx-auto  d-block px-2 py-3 img-fluid" style="max-width:150px" alt="">
+
+                        </div>
+                        <div class=" col-lg-4 col-md-3  col-sm-4">
+
+                            <img src="assets/images/brand/honda-logo.png" class="mx-auto  d-block px-2 py-3 img-fluid" style="max-width:150px" alt="">
+
+                        </div>
+                        <div class=" col-lg-4 col-md-3  col-sm-4">
+
+                            <img src="assets/images/brand/hero-logo.png" class="mx-auto  d-block px-2 py-3 img-fluid" style="max-width:150px" alt="">
+
+                        </div>
+                        <div class=" col-lg-4 col-md-3  col-sm-4">
+
+                            <img src="assets/images/brand/bajaj-logo.png" class="mx-auto  d-block px-2 py-3 img-fluid" style="max-width:150px" alt="">
+
+                        </div>
+
+
+
+
+                    </div>
+
+                </div>
+
+
+
+                <!--Newsletteer box -->
+
+                <div class="col-lg-6 col-md-12 col-sm-12 mb-sm-5 border-0 mb-md-4 mx-auto py-5" style="background-color: #E76F51;max-height: 500px;">
+
+                    <h4 class="h4 text-center fw-bold text-light pt-5">Get Notification</h4>
+                    <form action="" class="form pb-5 px-3">
+                        <div class="input-group pt-2">
+                            <input type="email" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
+                            <span class="btn text-light" style="background-color: #cf836f;"><i
+                                    class="far fa-paper-plane"></i> Subscribe</span>
+                        </div>
+                    </form>
+                </div>
+        </section>
     </main>
+
+
+
     <script src="assets/js/bootstrap.bundle.min.js "></script>
 </body>
 
