--- a/index.html
+++ b/index.html
@@ -520,7 +520,65 @@
         </section>
     </main>
 
+    <footer style="background-color: #0B0D17;">
+        <div class="container">
+            <div class="row ">
+                <div class="col-lg-8 col-md-6 col-sm-12 py-5 text-start">
+                    <ul class="navbar-nav list-group-horizontal ">
+                        <li class="nav-item p-2 active">
+                            <a class="nav-link text-light" href="#">Download Now</a>
+                        </li>
+                        <li class="nav-item p-2">
+                            <a class="nav-link text-light" href="#">License</a>
+                        </li>
 
+
+
+                    </ul>
+                    <ul class="navbar-nav list-group-horizontal-lg">
+                        <li class="nav-item p-2 ">
+                            <a class="nav-link text-light" href="#">About</a>
+                        </li>
+                        <li class="nav-item p-2 mx-2">
+                            <a class="nav-link text-light" href="#">Features</a>
+                        </li>
+                        <li class="nav-item p-2 mx-2 ">
+                            <a class="nav-link text-light" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item p-2 mx-2">
+                            <a class="nav-link text-light" href="#">Careers</a>
+                        </li>
+                        <li class="nav-item p-2 mx-2">
+                            <a class="nav-link text-light" href="#">Help</a>
+                        </li>
+                        <li class="nav-item p-2 mx-2">
+                            <a class="nav-link text-light" href="#">Privacy Policy</a>
+                        </li>
+
+
+
+                    </ul>
+                    <p class="h6 px-2  text-light">Copyright &copy; 2021 Honda CBR</p>
+                    <p class="h6 px-2 text-light">Made With <span class="text-danger">♥</span> By
+                        <a href="https://www.facebook.com/hasanul.sakir/" class="text-decoration-none text-primary">
+                            Hasanul Sakir</a>
+                    </p>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 py-5 ">
+
+                    <p class=" text-light mx-3">Get the App
+                    </p>
+
+                    <a class="nav-link " href="#">
+                        <img src="assets/images/appstore.png" style="max-width: 135px;max-height: 40px;" alt="">
+                    </a>
+
+                    <a class="nav-link text-light" href="#"><img src="assets/images/playstore.png" style="max-width: 135px;max-height: 40px;" alt=""></a>
+
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="assets/js/bootstrap.bundle.min.js "></script>
 </body>
